--- a/SGPI/Views/Administrador/CrearUsuario.cshtml
+++ b/SGPI/Views/Administrador/CrearUsuario.cshtml
@@ -11,27 +11,33 @@
     <div class="row">
         
     </div>
-    <div class="row" >
-        <div class="col-3">
-            <input asp-for="NumeroDoc" class="form-control" />
+    <div class="row mt-3" >
+        <div class="col-3 form-floating">
+            <input asp-for="NumeroDoc" type="number" placeholder="Numero Documento" class="form-control" />
+            <label for="floatingInput" class="form-label">Numero Documento</label>
         </div>
-        <div class="col-3" >
-            <label for="basic-url" class="form-label">Nombre</label>
-            <input  asp-for="Nombre" class="form-control"/>
+        <div class="col-3 form-floating">
+            <input asp-for="Nombre" placeholder="Nombre" class="form-control" />
+            <label for="floatingInput" class="form-label">Nombre</label>
         </div>
-        <div class="col-3" >
-            <input  asp-for="PrimerApellido" class="form-control"/>
+        <div class="col-3 form-floating">
+            <input asp-for="PrimerApellido" placeholder="Primer Apellido" class="form-control" />
+            <label for="floatingInput" class="form-label">Primer Apellido</label>
         </div>
-        <div class="col-3" >
-
-            <input  asp-for="SegundoApellido" class="form-control"/>
+        <div class="col-3 form-floating">
+            <input asp-for="SegundoApellido" placeholder="Segundo Apellido" class="form-control" />
+            <label for="floatingInput" class="form-label">Segundo Apellido</label>
         </div>
 
     </div>
-    <div class="row">
-        <div class="div-3 form-control">
-            <label asp-for="IdGenero" class="form-label">Genero</label>
-            @Html.DropDownList("IdGenero", new SelectList(ViewBag.genero, "IdGenero", "Genero"), new {@class="form-control"});
+    <div class="row mt-3">
+        <div class="col-3">
+            <div class="form-control">
+                <label asp-for="IdGenero" class="form-label">Genero</label>
+                @Html.DropDownList("IdGenero", new SelectList(ViewBag.genero, "IdGenero", "Genero"), new {@class="form-control"})
+            </div>
         </div>
+        
+        
     </div>
 </form>
