--- a/SGPI/Views/Administrador/EditarUsuario.cshtml
+++ b/SGPI/Views/Administrador/EditarUsuario.cshtml
@@ -1,23 +1,19 @@
 ﻿@model SGPI.Models.Usuario
 
 @{
-    // eL arroba es para realizar codigo de c# en html
 
-    ViewData["Title"] = "CrearUsuario";
+    ViewData["Title"] = "EditarUsuario";
     Layout = "_layout";
 
 }
 
-<header>
-    <h1>Crear Usuario</h1>
-</header>
-
-
+<h1>EditarUsuario</h1>
 
 <form method="post" class="container">
-    <selection >
+    <selection>
         <div class="card p-2 shadow rounded">
             <div class="row mt-3">
+                <input type="hidden" asp-for="IdUsuario" />
                 <div class="form-group form-floating col-4">
                     <input asp-for="Nombre" class="form-control" placeholder="Agregue su nombre">
                     <label for="floatingInput" asp-for="Nombre">Nombre</label>
@@ -34,7 +30,7 @@
                 </div>
             </div>
 
-            <div class="row mt-3">
+@*             <div class="row mt-3">
                 <div class="col-6 form-group form-floating">
                     @Html.DropDownList("IdDoc", new SelectList(ViewBag.tipoDocumento, "IdDoc", "Descripcion"), new { @class = "form-control" })
                     <label for="floatingInput" asp-for="IdDoc">Tipo de Documento</label>
@@ -44,7 +40,7 @@
                     <input asp-for="NumeroDoc" class="form-control" placeholder="Ejemplo: 123456789">
                     <label for="floatingInput" asp-for="NumeroDoc">Número de Documento</label>
                 </div>
-            </div>
+            </div> *@
 
             <div class="row mt-3">
                 <div class="form-group col-6 form-floating">
@@ -52,10 +48,10 @@
                     <label for="floatingInput" asp-for="IdGenero">Género</label>
                 </div>
 
-                <div class="form-group col-6 form-floating">
+@*                 <div class="form-group col-6 form-floating">
                     @Html.DropDownList("IdRol", new SelectList(ViewBag.rol, "IdRol", "Descripcion"), new { @class = "form-control" })
                     <label for="floatingInput" asp-for="IdRol">Rol</label>
-                </div>
+                </div> *@
             </div>
 
             <div class="row mt-3">
@@ -64,16 +60,16 @@
                     <label for="floatingInput" asp-for="Email">Correo Electrónico</label>
                 </div>
 
-                <div class="form-group col-6 form-floating">
+@*                 <div class="form-group col-6 form-floating">
                     <input asp-for="Password" class="form-control" placeholder="Ejemplo: ********">
                     <label for="floatingInput" asp-for="Password">Contraseña</label>
-                </div>
+                </div> *@
             </div>
 
             <div class="row mt-3">
                 <div class="form-group col-6 form-floating">
                     @Html.DropDownList("IdPrograma", new SelectList(ViewBag.programa, "IdPrograma", "Descripcion"), new { @class = "form-control" })
-                    <label for="floatingInput" asp-for="IdRol">Rol</label>
+                    <label for="floatingInput" asp-for="IdPrograma">Programa</label>
                 </div>
 
                 <div class="col-6">
@@ -85,12 +81,8 @@
             <br>
             <div class="row mt-3">
                 <div class="col-12 text-center">
-                    <button type="submit" class="btn btn-primary btn-sm">Guardar</button>
+                    <button type="submit" class="btn btn-primary btn-sm" asp-action="Editar" asp-controller="Administrador" >Guardar</button>
                 </div>
             </div>
         </div>
-       
-
 </form>
-
-            
