--- a/SGPI/Views/Shared/_Layout.cshtml
+++ b/SGPI/Views/Shared/_Layout.cshtml
@@ -6,11 +6,14 @@
     <title>@ViewData["Title"] - SGPI</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/SGPI.styles.css" asp-append-version="true" />
+    
+    <link href="css/font-awesome/css/fontawesome.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3" data-bs-theme="dark">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">SGPI</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -20,10 +23,13 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Administrador" asp-action="CrearUsuario">Crear Usuario</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Administrador" asp-action="CrearUsuario"><i class=" fa-solid fa-user-plus"></i> Crear Usuario</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Administrador" asp-action="BuscarUsuario">Buscar Usuario</a>
+                            <a class="nav-link text-thite" asp-area="" asp-controller="Administrador" asp-action="BuscarUsuario"><i class="fa-solid fa-users-viewfinder fa-lg"></i> Buscar Usuario</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-thite" asp-area="" asp-controller="Estudiante" asp-action="BuscarEstudiante"><i class="fa-solid fa-users-viewfinder fa-lg"></i> Buscar Estudiante</a>
                         </li>
                     </ul>
                 </div>
@@ -41,6 +47,7 @@
             &copy; 2023 - SGPI - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
+    <script src="css/font-awesome/js/all.min.js"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
