--- a/SGPI/Views/Shared/_Layout.cshtml
+++ b/SGPI/Views/Shared/_Layout.cshtml
@@ -6,10 +6,9 @@
     <title>@ViewData["Title"] - SGPI</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link href="css/font-awesome/css/fontawesome.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-
 </head>
 <body>
     <header>
@@ -29,7 +28,13 @@
                             <a class="nav-link text-thite" asp-area="" asp-controller="Administrador" asp-action="BuscarUsuario"><i class="fa-solid fa-users-viewfinder fa-lg"></i> Buscar Usuario</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-thite" asp-area="" asp-controller="Estudiante" asp-action="BuscarEstudiante"><i class="fa-solid fa-users-viewfinder fa-lg"></i> Buscar Estudiante</a>
+                            <a class="nav-link text-thite" asp-area="" asp-controller="Estudiante" asp-action="BuscarEstudiante"><i class="fa-solid fa-person-arrow-down-to-line fa-lg"></i> Buscar Estudiante</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-thite" asp-area="" asp-controller="Estudiante" asp-action="Pagos"><i class="fa-solid fa-wallet fa-lg"></i> Pagos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-thite" asp-area="" asp-controller="Estudiante" asp-action="ObtenerPagos"><i class="fa-solid fa-money-bill-1 fa-lg"></i> Mis Pagos</a>
                         </li>
                     </ul>
                 </div>
@@ -47,6 +52,8 @@
             &copy; 2023 - SGPI - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
     <script src="css/font-awesome/js/all.min.js"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
